# PrimarySoftwareWithoutQt

./: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
